revenuecat-2022-12-1/v1.2/Integrations/intercom.md
---
title: "Intercom"
slug: "intercom"
excerpt: "Send subscription events to Intercom"
hidden: false
createdAt: "2019-01-18T18:49:12.332Z"
updatedAt: "2019-01-25T21:48:41.401Z"
---
[block:callout]
{
  "type": "success",
  "body": "Intercom integration is only available on the [Grow plan](https://www.revenuecat.com/pricing)."
}
[/block]
RevenueCat can automatically send subscription events to Intercom. This can be helpful in understanding what stage a customer is in to react accordingly. For example, you might want to:
- Send an onboarding campaign to a user in a free trial
- Allow customer support grant a [promotional subscription](doc:customers#section-granting-promotional-subscriptions) to a loyal user that experienced issues
- Create Intercom filters for users that cancelled free trials

With accurate and up-to-date subscription data in Intercom, you'll be set to turbo charge your customer support ⚡️
[block:api-header]
{
  "title": "1. Connect with Intercom"
}
[/block]
Go to [RevenueCat's dashboard](https://app.revenuecat.com) and click the Connect with Intercom button in your app's settings.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/36318ec-Screen_Shot_2019-01-25_at_1.46.51_PM.png",
        "Screen Shot 2019-01-25 at 1.46.51 PM.png",
        899,
        162,
        "#eff4fa"
      ]
    }
  ]
}
[/block]

[block:api-header]
{
  "title": "2. Set Event Names"
}
[/block]
Once your account is connected, you can configure the event names that we'll send to Intercom. If you leave any field blank, we'll just use our default names.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/4ed8a91-Screen_Shot_2019-01-18_at_10.43.44_AM.png",
        "Screen Shot 2019-01-18 at 10.43.44 AM.png",
        1070,
        857,
        "#fafafa"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You're all set!",
  "body": "That's all there is to it! You'll now be seeing subscription events in Intercom. Woohoo!"
}
[/block]